ingress/cov-website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cov-website-ingress
  namespace: cov-website
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx-public
  tls:
  - hosts:
    - gemberkoekje.nl
    - cov-website.gemberkoekje.nl
    secretName: cov-website-tls
  rules:
  - host: gemberkoekje.nl
    http:
      paths:
      - path: /cov-website
        pathType: Prefix
        backend:
          service:
            name: cov-website-service
            port:
              number: 80
  - host: cov-website.gemberkoekje.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cov-website-service
            port:
              number: 80
