ingress/curatool-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: curatool-ingress
  namespace: curatool
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx-public
  tls:
  - hosts:
    - gemberkoekje.nl
    - curatool.gemberkoekje.nl
    secretName: curatool-tls
  rules:
  - host: gemberkoekje.nl
    http:
      paths:
      - path: /curatool
        pathType: Prefix
        backend:
          service:
            name: curatool
            port:
              number: 80
  - host: curatool.gemberkoekje.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: curatool
            port:
              number: 80
