ingress/dockhand-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dockhand-internal
  namespace: dockhand
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.0.0/16,10.0.0.0/8"
spec:
  ingressClassName: nginx-public
  rules:
    - http:
        paths:
          - path: /dockhand
            pathType: Prefix
            backend:
              service:
                name: dockhand
                port:
                  number: 80
