ingress/dungeontable-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dungeontable-ingress
  namespace: dungeontable
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx-public
  tls:
  - hosts:
    - gemberkoekje.nl
    - dungeontable.gemberkoekje.nl
    secretName: dungeontable-tls
  rules:
  - host: gemberkoekje.nl
    http:
      paths:
      - path: /dnd
        pathType: Prefix
        backend:
          service:
            name: dungeontable-service
            port:
              number: 80
  - host: dungeontable.gemberkoekje.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dungeontable-service
            port:
              number: 80
