ingress/ebi-cs-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ebi-cs-frontend-ingress
  namespace: ebi-cs-api
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx-public
  tls:
    - hosts:
        - gemberkoekje.nl
        - ebi-frontend.gemberkoekje.nl
      secretName: ebi-cs-frontend-tls
  rules:
    - host: gemberkoekje.nl
      http:
        paths:
          - path: /ebi-frontend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ebi-cs-frontend-service
                port:
                  number: 80
    - host: ebi-frontend.gemberkoekje.nl
      http:
        paths:
          - path: /(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ebi-cs-frontend-service
                port:
                  number: 80
