ingress/fileserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: file-server-ingress
  namespace: file-server
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
spec:
  ingressClassName: nginx-public
  tls:
  - hosts:
    - gemberkoekje.nl
    - fileserver.gemberkoekje.nl
    secretName: fileserver-tls
  rules:
  - host: gemberkoekje.nl
    http:
      paths:
      - path: /fileserver
        pathType: Prefix
        backend:
          service:
            name: file-server
            port:
              number: 80
  - host: fileserver.gemberkoekje.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: file-server
            port:
              number: 80
