ingress/healthcheck-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthcheck-ingress
  namespace: cluster-healthcheck
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx-public
  tls:
  - hosts:
    - gemberkoekje.nl
    - healthcheck.gemberkoekje.nl
    secretName: healthcheck-tls
  rules:
  - host: gemberkoekje.nl
    http:
      paths:
      - path: /healthcheck
        pathType: Prefix
        backend:
          service:
            name: cluster-healthcheck
            port:
              name: http
  - host: healthcheck.gemberkoekje.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cluster-healthcheck
            port:
              name: http
