ingress/klaverjas-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: klaverjas-ingress
  namespace: klaverjassen
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-public
  rules:
    - http:
        paths:
          - path: /klaverjas
            pathType: Prefix
            backend:
              service:
                name: klaverjas-service
                port:
                  number: 80
