ingress/phpmyadmin-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-ip-whitelist
  namespace: mysql
spec:
  ipWhiteList:
    sourceRange:
      - 10.0.0.0/8
      - 192.168.0.0/16
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: phpmyadmin-strip-prefix
  namespace: mysql
spec:
  stripPrefix:
    prefixes:
      - /phpmyadmin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
  namespace: mysql
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: phpmyadmin-strip-prefix@kubernetescrd,default-ip-whitelist@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /phpmyadmin
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin
                port:
                  number: 80
