ingress/spacetraders-assets-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spacetraders-assets-ingress
  namespace: spacetraders
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx-public
  tls:
  - hosts:
    - gemberkoekje.nl
    secretName: ebi-cs-api-tls
  rules:
  - host: gemberkoekje.nl
    http:
      paths:
      - path: /spacetraders/css
        pathType: Prefix
        backend:
          service:
            name: spacetraders-app-service
            port:
              number: 80
      - path: /spacetraders/js
        pathType: Prefix
        backend:
          service:
            name: spacetraders-app-service
            port:
              number: 80
      - path: /spacetraders/lib
        pathType: Prefix
        backend:
          service:
            name: spacetraders-app-service
            port:
              number: 80
      - path: /spacetraders/favicon.ico
        pathType: Exact
        backend:
          service:
            name: spacetraders-app-service
            port:
              number: 80
      - path: /spacetraders/SpaceTraders.App.styles.css
        pathType: Exact
        backend:
          service:
            name: spacetraders-app-service
            port:
              number: 80
