ingress/sts2viewer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sts2viewer-ingress
  namespace: sts2viewer
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx-public
  tls:
  - hosts:
    - gemberkoekje.nl
    - sts2viewer.gemberkoekje.nl
    secretName: ebi-cs-api-tls
  rules:
  - host: gemberkoekje.nl
    http:
      paths:
      - path: /sts2viewer(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: sts2viewer-service
            port:
              number: 80
  - host: sts2viewer.gemberkoekje.nl
    http:
      paths:
      - path: /(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: sts2viewer-service
            port:
              number: 80
