ingress/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: flux-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx   # <--- Add this line
  rules:
    - http:
        paths:
          - path: /vault
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
